create a small component to test the rendering

--- a/src/webcomponents/yl-card/yl-card.scss
+++ b/src/webcomponents/yl-card/yl-card.scss
@@ -1,5 +1,19 @@
-$text-color: red;
+$text-color: #156c91;
 
-.name {
-    color: $text-color;
+.yl-card {
+    border: 1px solid black;
+    border-radius: 4px;
+    display: inline-block;
+    padding: 4px 12px;
+
+    .yl-card__name {
+        color: $text-color;
+        margin: 4px;
+    }
+    .yl-card__title {
+        color: #666;
+        font-style: italic;
+        margin: 4px;
+        text-align: center;
+    }
 }
