use bootstrap styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,1 @@
-@import 'partials/config/variables';
-@import 'partials/helpers/global-states';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
